kubernetes/deployment-obras.yaml
apiVersion: v1
kind: Service
metadata:
  name: obras
  labels:
    app: obras
spec:
  ports:
    - port: 5000
  selector:
    app: obras
    tier: backend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: obras
spec:
  selector:
    matchLabels:
      app: obras
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: obras
        tier: backend
    spec:
      containers:
      - name: obras
        imagePullPolicy: IfNotPresent
        image: martinsaporiti/obras_catalog_service:1.0.0
        ports:
        - containerPort: 5000
