kubernetes/deployment-ratings.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-service
  labels:
    app: ratings
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app: ratings
    tier: backend

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: ratings
spec:
  selector:
    matchLabels:
      app: ratings
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        tier: backend
    spec:
      containers:
      - name: ratings
        imagePullPolicy: IfNotPresent
        image: martinsaporiti/ratings_service:1.0.0
        ports:
          - name: http
            containerPort: 5000
