kubernetes/deployment-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  ports:
    - port: 80
  selector:
    app: webapp
    tier: frontend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
    spec:
      containers:
      - name: webapp
        imagePullPolicy: IfNotPresent
        image: martinsaporiti/obras_web_app:1.0.0
        ports:
        - containerPort: 80
