kubernetes/ingress-webapp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /web
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: webapp-service
          servicePort: 80
